# FluxDeck

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/fluxctl/: Cargo.toml
crates/fluxctl/src/: cli.rs  client.rs  lib.rs  main.rs
crates/fluxctl/tests/: cli_smoke_test.rs
crates/fluxd/: Cargo.toml
crates/fluxd/migrations/: 001_init.sql  002_gateway_protocol_config.sql  003_gateway_auto_start.sql  004_request_log_forwarding_fields.sql  005_request_logs_drop_resource_fks.sql  006_request_logs_cached_tokens.sql  007_gateway_route_targets.sql  008_provider_health_states.sql  009_request_logs_failover_fields.sql  010_provider_health_scope.sql
crates/fluxd/src/: lib.rs  main.rs
crates/fluxd/src/domain/: gateway.rs  mod.rs  provider.rs  provider_health.rs
crates/fluxd/src/forwarding/: anthropic_inbound.rs  executor.rs  mod.rs  (+5 more)
crates/fluxd/tests/: admin_api_test.rs  anthropic_count_tokens_test.rs  anthropic_decoder_test.rs  anthropic_forwarding_test.rs  anthropic_native_base_url_test.rs  anthropic_native_forwarding_test.rs  anthropic_native_streaming_test.rs  anthropic_stream_encoder_test.rs  anthropic_streaming_test.rs  compatibility_mode_test.rs  forwarding_types_test.rs  gateway_manager_test.rs  openai_encoder_test.rs  openai_forwarding_test.rs  openai_passthrough_fallback_test.rs  openai_streaming_test.rs  protocol_registry_test.rs  provider_health_service_test.rs  provider_service_test.rs  request_log_retention_test.rs  request_log_service_test.rs  route_selector_test.rs  storage_migration_test.rs  target_resolver_test.rs
(+236 files in other folders)
