[package]
name = "fluxctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
