[package]
name = "fluxd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
axum = "0.8.1"
bytes = "1.10.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.44.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
